sleepers template added

--- a/services/web/server/src/simcore_service_webserver/data/fake-template-projects.json
+++ b/services/web/server/src/simcore_service_webserver/data/fake-template-projects.json
@@ -1,5 +1,129 @@
 [
   {
+    "projectUuid": "cb9188ae-1438-4d5e-9b09-ddcc63121ef4",
+    "name": "Sleepers",
+    "description": null,
+    "notes": "",
+    "thumbnail": "",
+    "prjOwner": "Maiz",
+    "collaborators": {},
+    "creationDate": "2018-12-17T14:30:40.746Z",
+    "lastChangeDate": "2018-12-17T14:36:38.018Z",
+    "workbench": {
+      "a4402273-408a-4434-9504-d4a9bebeda37": {
+        "label": "sleeper 0",
+        "inputs": {
+          "in_1": null,
+          "in_2": 2
+        },
+        "inputNodes": [],
+        "outputNode": false,
+        "outputs": {},
+        "parent": null,
+        "position": {
+          "x": 50,
+          "y": 300
+        },
+        "key": "simcore/services/comp/itis/sleeper",
+        "version": "1.0.0"
+      },
+      "b69360cb-9349-45ac-b2cd-2052ffc64608": {
+        "label": "sleeper 1",
+        "inputs": {
+          "in_1": {
+            "nodeUuid": "a4402273-408a-4434-9504-d4a9bebeda37",
+            "output": "out_1"
+          },
+          "in_2": 2
+        },
+        "inputNodes": [
+          "a4402273-408a-4434-9504-d4a9bebeda37"
+        ],
+        "outputNode": false,
+        "outputs": {},
+        "parent": null,
+        "position": {
+          "x": 300,
+          "y": 200
+        },
+        "key": "simcore/services/comp/itis/sleeper",
+        "version": "1.0.0"
+      },
+      "712bccc9-a259-4dae-9f64-94ab71317e99": {
+        "label": "sleeper 2",
+        "inputs": {
+          "in_1": {
+            "nodeUuid": "b69360cb-9349-45ac-b2cd-2052ffc64608",
+            "output": "out_1"
+          },
+          "in_2": {
+            "nodeUuid": "b69360cb-9349-45ac-b2cd-2052ffc64608",
+            "output": "out_2"
+          }
+        },
+        "inputNodes": [
+          "b69360cb-9349-45ac-b2cd-2052ffc64608"
+        ],
+        "outputNode": false,
+        "outputs": {},
+        "parent": null,
+        "position": {
+          "x": 550,
+          "y": 200
+        },
+        "key": "simcore/services/comp/itis/sleeper",
+        "version": "1.0.0"
+      },
+      "d78aeaec-5657-499e-86d6-9980c33dc8bb": {
+        "label": "sleeper 3",
+        "inputs": {
+          "in_1": null,
+          "in_2": {
+            "nodeUuid": "a4402273-408a-4434-9504-d4a9bebeda37",
+            "output": "out_2"
+          }
+        },
+        "inputNodes": [
+          "a4402273-408a-4434-9504-d4a9bebeda37"
+        ],
+        "outputNode": false,
+        "outputs": {},
+        "parent": null,
+        "position": {
+          "x": 420,
+          "y": 400
+        },
+        "key": "simcore/services/comp/itis/sleeper",
+        "version": "1.0.0"
+      },
+      "850d5521-7ae4-4ac7-aff6-6bb537766c2d": {
+        "label": "sleeper 4",
+        "inputs": {
+          "in_1": {
+            "nodeUuid": "712bccc9-a259-4dae-9f64-94ab71317e99",
+            "output": "out_1"
+          },
+          "in_2": {
+            "nodeUuid": "d78aeaec-5657-499e-86d6-9980c33dc8bb",
+            "output": "out_2"
+          }
+        },
+        "inputNodes": [
+          "712bccc9-a259-4dae-9f64-94ab71317e99",
+          "d78aeaec-5657-499e-86d6-9980c33dc8bb"
+        ],
+        "outputNode": false,
+        "outputs": {},
+        "parent": null,
+        "position": {
+          "x": 800,
+          "y": 300
+        },
+        "key": "simcore/services/comp/itis/sleeper",
+        "version": "1.0.0"
+      }
+    }
+  }, {
     "projectUuid": "template-uuid-1234-a1a7-f7d4f3a8f26b",
     "name": "Colleen Clancy use cases: 0D",
     "description": "Colleen Clancy use cases: 0D",
